--- a/styles/style.css
+++ b/styles/style.css
@@ -1,46 +1,122 @@
-
-#background-img {
-    background-image: url(/image/img-mission-background.jpg);
-    height: 700px;
-    width: 1200px;
-    margin: 0 auto;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-#background-img-2 {
-    background-image: url(/image/img-locations-background.jpg);
-    height: 700px;
-    width: 1200px;
-    margin: 0 auto;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+body {
+  font-family: Helvetica, sans-serif;
+  font-size: 22px;
+  background-color: black;
+  color: seashell;
+  opacity: 0.9;
+  text-align: center;
 }
 
 header {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    height: 69px;
-    background-color: black;
-    border-bottom: 1px solid seashell;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 10px;
-    z-index: 1000;
-  }
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 69px;
+  background-color: black;
+  border-bottom: 1px solid seashell;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 10px;
+  z-index: 1000;
+}
 
-nav{
-    text-decoration:underline;
-    float: right;
-    text-align: right
+#logo {
+  height: 50px;
 }
 
 nav a {
-    color: seashell;
-    margin: 0 20px;
-    text-decoration: underline;
-  }
+  color: seashell;
+  margin: 0 20px;
+  text-decoration: underline;
+}
+
+.background-img {
+  background-image: url(/image/img-mission-background.jpg);
+  background-position: center;
+  background-size: cover;
+  height: 700px;
+  width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.mission-text {
+  background-color: black;
+  width: 100%;
+  padding: 20px;
+}
+
+h2 {
+  margin-bottom: 10px;
+}
+
+#featured {
+  width: 1000px;
+  margin: 0 auto;
+  padding-top: 80px;
+}
+
+.tea-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.tea-item {
+  margin: 10px;
+  text-align: center;
+}
+
+.tea-item img {
+  height: 200px;
+  width: auto;
+}
+
+#locations {
+  background-image: url(/image/img-locations-background.jpg);
+  background-size: cover;
+  background-position: center;
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.locations-container {
+  display: flex;
+  justify-content: space-around;
+  padding: 40px 0;
+}
+
+.location {
+  background-color: black;
+  width: 300px;
+  padding: 20px;
+  opacity: 1;
+  border-radius: 10px;
+}
+
+footer {
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+footer h5, footer p {
+  margin: 5px 0;
+}
+
+footer .copyright {
+  text-align: left;
+  padding-left: 20px;
+}
